--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -81,9 +81,7 @@ jobs:
         env:
           CENTRAL_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
           CENTRAL_TOKEN: ${{ secrets.CENTRAL_TOKEN }}
-          MAVEN_GPG_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-        run: mvn -B -DskipTests deploy -Prelease
+        run: mvn -B -DskipTests deploy
 
       - name: Skip (not a SNAPSHOT)
         if: ${{ !endsWith(steps.version.outputs.version, '-SNAPSHOT') }}
