Aggiornate librerie. Avanzamento versione 1.1.0-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
 	<groupId>org.gov4j.govpay</groupId>
 	<artifactId>govpay-bom</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>GovPay BOM</name>
 	<description>Parent POM for dependency version management across GovPay projects</description>
-	<url>https://gov4j.org/maven/govpay/govpay-bom/1.0.0</url>
+	<url>https://gov4j.org/maven/govpay/govpay-bom/1.1.0-SNAPSHOT</url>
 
 	<licenses>
 		<license>
@@ -59,26 +59,26 @@
         <spring-boot.version>3.5.9</spring-boot.version>
         <spring-framework.version>6.2.15</spring-framework.version>
         <spring-security.version>6.5.7</spring-security.version>
-        <spring-data.version>2025.0.7</spring-data.version>
+        <spring-data.version>2025.1.2</spring-data.version>
         <spring-batch.version>5.2.4</spring-batch.version>
 
         <!-- Database -->
         <hibernate.version>6.6.39.Final</hibernate.version>
         <hikaricp.version>6.3.3</hikaricp.version>
-        <postgresql.version>42.7.8</postgresql.version>
-        <mysql.version>9.5.0</mysql.version>
-        <oracle.version>23.7.0.25.01</oracle.version>
+        <postgresql.version>42.7.9</postgresql.version>
+        <mysql.version>9.6.0</mysql.version>
+        <oracle.version>23.26.1.0.0</oracle.version>
         <mssql.version>12.8.1.jre11</mssql.version>
-        <h2.version>2.3.232</h2.version>
+        <h2.version>2.4.240</h2.version>
 
         <!-- Logging -->
         <slf4j.version>2.0.17</slf4j.version>
-        <logback.version>1.5.22</logback.version>
+        <logback.version>1.5.28</logback.version>
 
         <!-- JSON/XML -->
-        <jackson.version>2.19.4</jackson.version>
-        <jakarta-xml-bind.version>4.0.2</jakarta-xml-bind.version>
-        <jaxb-runtime.version>4.0.5</jaxb-runtime.version>
+        <jackson.version>2.21.0</jackson.version>
+        <jakarta-xml-bind.version>4.0.5</jakarta-xml-bind.version>
+        <jaxb-runtime.version>4.0.6</jaxb-runtime.version>
 
         <!-- Jakarta EE -->
         <jakarta-servlet.version>6.1.0</jakarta-servlet.version>
@@ -87,25 +87,25 @@
         <jakarta-annotation.version>3.0.0</jakarta-annotation.version>
 
         <!-- Utilities -->
-        <commons-lang3.version>3.17.0</commons-lang3.version>
+        <commons-lang3.version>3.20.0</commons-lang3.version>
         <commons-io.version>2.21.0</commons-io.version>
-        <commons-codec.version>1.18.0</commons-codec.version>
+        <commons-codec.version>1.21.0</commons-codec.version>
         <guava.version>33.5.0-jre</guava.version>
         <lombok.version>1.18.42</lombok.version>
         <mapstruct.version>1.6.3</mapstruct.version>
 
         <!-- Testing -->
         <junit-jupiter.version>5.12.2</junit-jupiter.version>
-        <mockito.version>5.17.0</mockito.version>
+        <mockito.version>5.21.0</mockito.version>
         <assertj.version>3.27.6</assertj.version>
         <testcontainers.version>1.21.4</testcontainers.version>
 
         <!-- API Documentation -->
-        <springdoc-openapi.version>3.0.0</springdoc-openapi.version>
+        <springdoc-openapi.version>3.0.1</springdoc-openapi.version>
 
         <!-- Publishing -->
-        <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
-        <central-publishing-maven-plugin.version>0.7.0</central-publishing-maven-plugin.version>
+        <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
+        <central-publishing-maven-plugin.version>0.10.0</central-publishing-maven-plugin.version>
 
         <!-- OWASP Dependency Check -->
         <owasp.plugin.version>12.2.0</owasp.plugin.version>
@@ -115,12 +115,12 @@
 
         <!-- Maven Plugins -->
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
+        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.5.4</maven-failsafe-plugin.version>
         <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
-        <maven-war-plugin.version>3.4.0</maven-war-plugin.version>
+        <maven-war-plugin.version>3.5.1</maven-war-plugin.version>
         <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
+        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
         <maven-clean-plugin.version>3.4.0</maven-clean-plugin.version>
         <maven-install-plugin.version>3.1.3</maven-install-plugin.version>
