Aggiornata versione log4j alla 2.25.3

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
         <!-- Logging -->
         <slf4j.version>2.0.17</slf4j.version>
         <logback.version>1.5.28</logback.version>
+        <log4j2.version>2.25.3</log4j2.version>
 
         <!-- JSON/XML -->
         <jackson.version>2.21.0</jackson.version>
@@ -288,6 +289,16 @@
             </dependency>
 
             <!-- Logging -->
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-to-slf4j</artifactId>
+                <version>${log4j2.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
