--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
         <jackson.version>2.21.0</jackson.version>
         <jakarta-xml-bind.version>4.0.5</jakarta-xml-bind.version>
         <jaxb-runtime.version>4.0.6</jaxb-runtime.version>
+        <jaxb2-maven-plugin.version>4.1.0</jaxb2-maven-plugin.version>
 
         <!-- Jakarta EE -->
         <jakarta-servlet.version>6.1.0</jakarta-servlet.version>
@@ -545,6 +546,13 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring-boot-maven-plugin.version}</version>
+                </plugin>
+
+                <!-- JAXB2 Maven Plugin -->
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>jaxb2-maven-plugin</artifactId>
+                    <version>${jaxb2-maven-plugin.version}</version>
                 </plugin>
 
                 <!-- OWASP Dependency Check -->
